2004-06-11  Dennis Smit  <ds@nerds-incorporated.org>

	* properties.c (property_show):
	s/O_utline/O_utline:/ as spotted by:
	Paisa Seeluangsawat  <paisa@users.sf.ne>

	Fixes bug: 136943.

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>
	
	* modemlights.c (ISDN_MAX_CHANNELS): Copy needed defines from
	linux/isdn.h instead of including it, unbreaking build with linux
	2.6 kernel headers.

	Patch by: Jon K Hellan  <hellan@acm.org>

	Fixes bug 129630.

2004-06-10  Dennis Smit  <ds@nerds-incorporated.org>

	* modemlights.c (update_display): Added
	tooltip. Removed static variable usage. Fixes bug #141484.

	Patch by: Vinay M R  <vinay.mandyakoppal@wipro.com>

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* modemlights.c (destroy_cb): Free the MLData structure so
	it doesn't leak.

2004-02-23  Dennis Smit  <ds@nerds-incorporated.org>

	* modemlights.c (about_cb): Set the screen right when the user
	requests the about dialog and it's already there but not on the
	right screen.

2004-02-10  Dennis Smit  <ds@nerds-incorporated.org>

	* modemlights.h: Added connect_dialog and run_dialog entries
	to the mldata structure.

	* modemlights.c (dial_cb): Converted to be multihead aware
	and cleanups.

	(execute_command): Converted to be multihead aware and
	cleanups.

	(run_response_cb): Added to response on the message_dialog
	within execute_command and changed it to be event driven
	so we have more control over it, and it doesn't annoy
	between instances.
	
2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-05  Muktha  <muktha.narayan@wipro.com>

	* modemlights.c: Add accessible name. Fixes bug #128260.

2004-01-31  Archana Shah  <archana.shah@wipro.com>

	* modemlights.h: Added a member in structure MLData for
	about dialog.
	* modemlights.c: (modemlights_applet_fill): Initialized about_dialog
	with NULL.