@@ -1,3 +1,7 @@
+2004-07-10  Kevin Vandersloot <kfv101 psu edu>
+
+	* modemlights.c: small fix for vertical panels. Patch by Vicent Noel.
+
 2004-06-11  Dennis Smit  <ds@nerds-incorporated.org>
 
 	* properties.c (property_show):
